fix: remove white space from the map

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,14 +72,15 @@ h6 {
 /* ====================== Navigation ====================== */
 
 nav {
-    height: 12.5vh;
-    background-color: #252831;
     text-align: center;
-    display: flex
 }
 
 nav h1 {
     margin: auto;
+    width: 100%;
+    display:inline-block;
+    background-color: #252831;
+    padding:20px;
 }
 
 nav h1 a {
@@ -87,6 +88,7 @@ nav h1 a {
     font-weight: 200;
     letter-spacing: 10px;
     text-transform: uppercase;
+    width: 100%;
 }
 
 #breadcrumb {
@@ -94,9 +96,10 @@ nav h1 a {
     list-style: none;
     background-color: #eee;
     font-size: 17px;
-    width: 100%;
     margin: 0 auto;
     text-align: center;
+    display: inline-block;
+    width: 100%;
 }
 
 
@@ -251,7 +254,7 @@ nav h1 a {
     right: 0;
     top: 80px;
     width: 100%;
-    margin-top: 125px;
+    margin-top: 117px;
 }
 
 .inside #map {
@@ -277,7 +280,7 @@ nav h1 a {
 }
 
 #restaurant-img {
-    width: 90%;
+    width: 100%;
 }
 
 #restaurant-address {
